--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </nav>
 
     <div class="story">
-        <div class="img"> <a href="https://www.instagram.com/"> <img src="/photo/sushil" alt=""> </a> <p>Sushil sahu</p> </div>
+        <div class="img"> <a href="https://www.instagram.com/"> <img src="/photo/sushil.jpg" alt=""> </a> <p>Your Story</p> </div>
         <div class="img"> <a href="#"> <img src="/photo/gendu.jpg" alt=""> </a> <p>Gendu 💃🏻</p> </div>
         <div class="img"> <a href="#"> <img src="/photo/niru.jpg" alt=""> </a> <p>Niru Bhai</p> </div>
         <div class="img"> <a href="#"> <img src="/photo/lipi.jpg" alt=""> </a> <p>Lipika</p> </div>
